--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@ main {
     width: 100%;
     height: 300px;
     background-color: #ddd;
-    justify-content: space-around;
     display: flex;
-    align-items: center;
 }
 
 a {
@@ -18,21 +16,22 @@ a {
 }
 
 .start {
-    width: 550px;
-    height: 200px;
-    /* background-color: #999; */
+    width: 50%;
+    height: 300px;
     text-align: left;
     font-size: 25px;
     font-weight: bold;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 
 .box {
-    width: 300px;
-    height: 200px;
-    /* background-color: #888; */
-    text-align: center;
+    width: 50%;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     line-height: 200px;
 }
 
