--- a/Website2/style.css
+++ b/Website2/style.css
@@ -15,7 +15,7 @@ main {
     background-color: #bbb;
 }
 
-.contanier {
+.container {
     width: 35%;
     height: 800px;
     background-color: antiquewhite;
@@ -51,3 +51,81 @@ nav {
     align-items: center;
 }
 
+section {
+    width: 100%;
+    height: 500px;
+    background-color: bisque;
+    display: flex;
+}
+
+.contents {
+    width: 100%;
+    height: 500px;
+    /* background-color: #999; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-weight: bold;
+}
+
+.contents > h1 {
+    font-size: 90px;
+    position: relative;
+}
+
+.contents > h1::before {
+    content: "Namaste";
+    position: absolute;
+    top: -20px;
+    left: 0;
+    font-size: 20px;
+    color: gray;
+}
+
+footer {
+    width: 100%;
+    height: 200px;
+    background-color:aquamarine;
+    display: flex;
+    justify-content: left;
+    padding-left: 70px;
+    align-items: center
+}
+
+footer > a {
+    font-size: 40px;
+}
+
+/* right */
+.right {
+    width: 65%;
+    height: 800px;
+    background-color: #666;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+.right img {
+    width: 100%;
+    height: 100%;
+}
+
+.box {
+    width: 500px;
+    height: 400px;
+    background-color: #999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mibox {
+    width: 500px;
+    height: 400px;
+    background-color: #888;
+}
