--- a/list-Web/style.css
+++ b/list-Web/style.css
@@ -15,27 +15,75 @@ li {
 header {
     width: 100%;
     height: 100px;
-    background-color: #111;
+    background-color: #888;
     display: flex;
 }
 
 .logo {
     width: 200px;
     height: 100px;
-    background-color: gray;
+    /* background-color: gray; */
+    text-align: center;
+    line-height: 100px;
+    font-size: 26px;
+    color: #fff;
 }
 
 nav {
     width: 100%;
     height: 100px;
-    background-color: #999;
+    /* background-color: #999; */
     display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
 }
 
+nav > ul {
+    width: 400px;
+    height: 100px;
+    /* background-color: #777; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
 
+nav > ul > li {
+    width: 120px;
+    height: 50px;
+    /* background-color: #aaa; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 24px;
+    border: 1.5px solid #c0c0c0;
+    transition: all 0.3s;
+}
+
+nav > ul > li:hover {
+    background-color: rgb(255, 255, 255);
+    color: #111;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+nav:hover li{
+    background-color: aquamarine;
+}
 
 .btn {
-    width: 200px;
+    width: 300px;
     height: 100px;
-    background-color: gray;
+    /* background-color: gray; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn > button {
+    width: 150px;
+    height: 55px;
+    border-radius: 13px;
+    border: none;
+    font-weight: 900;
 }
