--- a/Website4/style.css
+++ b/Website4/style.css
@@ -73,34 +73,74 @@ ul > li {
 }
 
 /* 네브 영역 */
-nav {
+.content {
     width: 100%;
     height: 550px;
     background-color: lightgrey;
+    display: flex;
 }
 
-/* nav-1 */
-.nav1 {
+/* num */
+.num {
     width: 10%;
     height: 550px;
     background-color: lightcyan;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    line-height: 275px;
+    text-align: center;
 }
 
-.nav1 > p {
-    margin-bottom: 200px;
-}
-
-/* nav-2 */
-.nav2 {
-    width: 60%;
+/* conarea */
+.conarea {
+    width: 500px;
     height: 550px;
     background-color: lightsalmon;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    line-height: 40px;
+}
+
+.text {
+    width: 500px;
+    height: 550px;
+    /* background-color: #111; */
+}
+
+.btn {
+    width: 400px;
+    height: 60px;
+    position: relative;
+    margin-top: 30px;
+}
+
+.btn input {
+    width: 400px;
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+}
+
+.btn button {
+    position: absolute;
+    width: 150px;
+    height: 43px;
+    top: 0;
+    bottom: 0;
+    right: -3px;
+    background-color: lightcoral;
+    color: #fff;
+    font-weight: 900;
+    border-radius: 5px;
+    border: none;
+}
+
+.text2 {
+    width: 350px;
+    height: 100px;
+    /* background-color: lightpink; */
+}
+
+.cardBox {
+    width: 300px;
+    height: 200px;
+    background-color: lightgreen;
+
 }
