--- a/Website5/style.css
+++ b/Website5/style.css
@@ -8,33 +8,33 @@ li {
 }
 
 .mainBox {
-    width: 1440px;
-    height: 765px;
+    width: 100%;
+    height: 800px;
     background-color: lightblue;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.sebox {
-    width: 1340px;
-    height: 665px;
+.Box {
+    width: 80%;
+    height: 650px;
     background-color: lightcyan;
 }
 
 nav {
-    width: 1340px;
-    height: 100px;
-    /* background-color: #999; */
+    width: 100%;
+    height: 80px;
+    /* background-color: #888; */
     display: flex;
     justify-content: right;
-    align-items: center;
+
 }
 
 ul {
-    width: 600px;
-    height: 100px;
-    /* background-color: lightgreen; */
+    width: 800px;
+    height: 80px;
+    /* background-color: #666; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -43,36 +43,58 @@ ul {
 ul > li {
     width: 100px;
     height: 100px;
-    /* background-color: #888; */
-    display: flex;
-    justify-content: center;
-    justify-content: space-around;
-    align-items: center;
-}
-
-/* contents */
-main {
-    width: 500px;
-    height: 565px;
-    background-color: lightsalmon;
+    /* background-color: #999; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .contents {
-    width: 500px;
-    height: 300px;
-    background-color: lightgreen;
+    width: 100%;
+    height: 600px;
+    /* background-color: greenyellow; */
     display: flex;
+    justify-content: left;
     align-items: center;
-    justify-content: center;
-    flex-direction: column;
 }
 
-.con1 {
+.textBox {
+    width: 700px;
+    height: 300px;
+    /* background-color: ghostwhite; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.text1 {
+    font-size: 40px;
+}
+
+.text2 {
     width: 450px;
-    height: 200px;
-    background-color: lightslategray;
-    
+    padding-top: 13px;
+}
+
+.btn {
+    width: 450px;
+    height: 70px;
+    background-color: #999;
+    /* padding-top: 40px; */
+}
+
+.btn button {
+    width: 200px;
+    height: 55px;
+    border-radius: 20px;
+    color: #fff;
+    background-color: #111;
+    border: none;
+}
+
+
+button > img {
+    width: 30px;
+    height: 50px;
 }
