--- a/list-Web/style2.css
+++ b/list-Web/style2.css
@@ -12,7 +12,7 @@ li {
 header {
     width: 1200px;
     height: 100px;
-    background-color: lightblue;
+    background: linear-gradient(45deg, lightblue, lightgoldenrodyellow);
     display: flex
 
 }
