--- a/list-Web/style3.css
+++ b/list-Web/style3.css
@@ -12,7 +12,6 @@ header {
     height: 100px;
     background-color: #111;
     display: flex;
-    margin: 20px;
     border-radius: 15px;
 }
 
@@ -72,4 +71,56 @@ ul > li {
     border-radius: 12px;
     border: none;
     font-weight: 900;
+}
+
+.window {
+    width: 1200px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.slide {
+    position: relative;
+    width: 4800px;
+    height: 400px;
+    background-color: #aaa;
+    display: flex;
+    animation: slide 5s infinite linear;
+}
+
+.slide > div {
+    width: 1200px;
+    height: 400px;
+
+}
+
+@keyframes slide {
+    0% {
+        left: 0;
+    }
+
+    23% {
+        left: 0;
+    }
+
+    33% {
+        left: -1200px;
+    }
+
+    56% {
+        left: -1200px;
+    }
+
+    66% {
+        left: -2400px;
+    }
+
+    90% {
+        left: -2400px;
+    }
+
+    100% {
+        left: -3600px;
+    }
 }
