--- a/SlideWebsite/style.css
+++ b/SlideWebsite/style.css
@@ -106,3 +106,29 @@ ul > li {
         left: -3600px;
     }
 }
+
+footer {
+    width: 1200px;
+    height: 100px;
+    background-color: lightgoldenrodyellow;
+    display: flex;
+    flex-direction: column;
+}
+
+.Downmenu {
+    width: 100%;
+    height: 50px;
+    background-color: #aaa;
+}
+
+.copyright {
+    width: 100%;
+    height: 50px;
+    background-color: #bbb;
+}
+
+.family {
+    width: 100%;
+    height: 50px;
+    background-color: #ccc;
+}
