--- a/Double-Slide/style.css
+++ b/Double-Slide/style.css
@@ -1,11 +1,11 @@
 * {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
 }
 
 .window {
     width: 1200px;
-    height: 300px;
+    height: 400px;
     overflow: hidden;
 }
 
@@ -28,7 +28,7 @@
     }
 
     40% {
-        left: 0px;
+        left: 0;
     }
 
     50% {
