--- a/Website3/style.css
+++ b/Website3/style.css
@@ -15,7 +15,7 @@ a {
 
 .imgs {
     width: 100%;
-    height: 100%;
+    height: 700px;
     position: absolute;
     top: 0;
     align-items: center;
