--- a/Dropdown-menubar/style.css
+++ b/Dropdown-menubar/style.css
@@ -1,71 +1,47 @@
-* {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
+/* 전체영역에서 여백을 없애줌 */
+	* {
+		margin: 0;
+		padding: 0;
+	}
+/* ul li태그에 리스트 스타일을 없앰 */
+	ul li{
+		list-style: none;
+	}
+/* a태그에 텍스트 밑줄을 없애고 색상을 #333 */
+	a {
+		text-decoration: none;
+		color:#333;
+	}
+/* 글자크기를 16px 맑은 고딕 굵게하고 width넓이 700, 높이 50만큼 배경색은 #ccc, 글자색은 검정색, 라인높이50px
+menu박스 가운데정렬, 글자가운데 정렬 */
+	#menu {
+		font:bold 16px "malgun gothic";
+		width:700px;
+		height:50px;
+		background: #ccc;
+		color:black;
+		line-height: 50px; 
+		margin:0 auto;
+		text-align: center;
+	}
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-header {
-    width: 1320px;
-    height: 200px;
-    background-color: #aaa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu {
-    width: 900px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    background-color: lightblue;
-}
-
-.submenu {
-    width: 150px;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    margin-left: 20px;
-    position: relative;
-}
-
-.menubtn {
-    text-align: center;
-    line-height: 40px;
-    margin-bottom: 10px;
-}
-
-.submenu > li {
-    width: 70px;
-    margin-bottom: 10px;
-}
-
-.submenu > a {
-    width: 150px;
-    height: 40px;
-    background-color: lightcyan;
-    display: block;
-    padding: 10px;
-}
-
-.submenu > a:hover {
-    background: lightblue;
-}
-
-.submenu .active {
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    z-index: 1;
-}
-
-.submenu~.submenu > li {
-    display: block;
-}
+/* menu태그 자식의 ul의 자식 li를 왼쪽정렬과 넓이 140설정 */
+	#menu > ul > li {
+		float:left;
+		width:140px;
+		position:relative;
+	}
+    #menu > ul > li > ul {
+		width:130px;
+		display:none;
+		position: absolute;
+		font-size:14px;
+		background: skyblue;
+	}
+	#menu > ul > li:hover > ul {
+		display:block;
+	}
+    #menu > ul > li > ul > li:hover {
+		background: orange;
+		transition: ease 1s;
+		}
