--- a/Dropdown-menubar/style.css
+++ b/Dropdown-menubar/style.css
@@ -1,5 +1,5 @@
 * {
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 }
 
@@ -40,7 +40,6 @@ a {
 }
 
 .menu > ul > li > ul > li:hover {
-	background-color: orange;
 	transition: all 0.2s;
 	background-color: rgba(255, 255, 255, 0.5);
 }
