--- a/Website3/style.css
+++ b/Website3/style.css
@@ -4,8 +4,15 @@
 }
 
 .body {
-    width: 1440px;
-    height: 765px;
+    width: 100%;
+}
+
+.head {
+    width: 1430px;
+}
+
+li {
+    list-style: none;
 }
 
 a {
@@ -15,7 +22,7 @@ a {
 
 .imgs {
     width: 100%;
-    height: 700px;
+    height: 600px;
     position: absolute;
     top: 0;
     align-items: center;
@@ -23,46 +30,83 @@ a {
     justify-content: center;
 }
 
+/* header */
+
 header {
-    width: 100%;
-    height: 100px;
-    /* background-color:lightgoldenrodyellow; */
+    width: 1440px;
     display: flex;
     position: relative;
     z-index: 1;
 }
 
 .logo {
-    width: 100%;
-    height: 100px;
-    /* background-color: lightcoral; */
+    width: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
     color: gray;
+    font-weight: 900;
+    font-size: 48px;
 }
 
-.logo > a:nth-child(1) {
-    font-size: 24px;
+.logo > a:hover {
+    color: rgb(192, 192, 192);
+    transition: all 0.2s;
+}
+
+nav {
+    width: 1000px;
+    height: 100px;
+    display: flex;
+}
+
+nav > ul {
+    width: 400px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: 700;
+    color: rgba(214, 21, 21, 0.6);
+}
+
+nav > ul > li:hover {
+    color: rgba(248, 1, 1, 0.699);
+}
+
+nav > ul > li {
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+nav > ul > li:nth-child(1) {
+    font-size: 22px;
     color: #fff;
-    font-weight: 900
 }
 
-.logo > a:nth-child(3) {
-    font-size: 18px;
+nav > ul > li:nth-child(1):hover {
     color: #fff;
-    font-weight: 900
 }
 
-.logo > button {
-    width: 150px;
-    height: 45px;
-    border-radius: 15px;
+.btn {
+    width: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn > button {
+    width: 100px;
+    height: 40px;
+    border-radius: 12px;
     background-color: transparent;
-    border-color: #fff;
+    border: 2px solid #fff;
     color: #fff;
-    font-size: 15px;
-    font-weight: 600;
+    cursor: pointer;
 }
 
 /* main */
@@ -71,14 +115,12 @@ main {
     position: relative;
     width: 500px;
     height: 500px;
-    /* background-color: lightgreen; */
     float: left;
 }
 
 .contents {
     width: 500px;
     height: 500px;
-    /* background-color: lightskyblue; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -96,8 +138,4 @@ main {
     text-align: right;
     color: lightgray;
     font-weight: 900;
-}
-
-.logo > a:hover {
-    color: rgb(192, 192, 192);
 }
