--- a/Website2/style.css
+++ b/Website2/style.css
@@ -61,7 +61,7 @@ section {
 
 .contents {
     width: 100%;
-    height: 500px;
+    height: 750px;
     /* background-color: #999; */
     display: flex;
     justify-content: center;
@@ -101,12 +101,13 @@ footer > a {
 /* right */
 .right {
     width: 65%;
-    height: 800px;
+    height: 950px;
     background-color: #666;
 }
 
 .right img {
     width: 100%;
+    height: 100%;
 }
 
 .box {
