--- a/Website2/style.css
+++ b/Website2/style.css
@@ -54,7 +54,7 @@ section {
 
 .contents {
     width: 100%;
-    height: 500px;
+    height: 750px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -91,12 +91,13 @@ footer > a {
 
 .right {
     width: 65%;
-    height: 800px;
+    height: 950px;
     background-color: #666;
 }
 
 .right img {
     width: 100%;
+    height: 100%;
 }
 
 .box {
