--- a/Website3/style.css
+++ b/Website3/style.css
@@ -8,7 +8,7 @@
 }
 
 .head {
-    width: 1430px;
+    width: 1530px;
 }
 
 li {
@@ -55,15 +55,19 @@ header {
 }
 
 nav {
-    width: 1000px;
+    width: 800px;
     height: 100px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: lightblue; */
 }
 
 nav > ul {
-    width: 400px;
+    width: 500px;
     height: 100px;
     display: flex;
+    /* background-color: #aaa; */
     justify-content: center;
     align-items: center;
     font-size: 20px;
