--- a/modal/style.css
+++ b/modal/style.css
@@ -1,6 +1,3 @@
-input {
-    display: flex;
-}
 
 .modal {
     width: 400px;
@@ -23,14 +20,6 @@ input {
     display: none;
 }
 
-#modal:checked~.modal {
-    display: block;
-}
-
-#modal1:checked~.modal2 {
-    display: block;
-}
-
-#modal2:checked~.modal3 {
+#modal:checked~.modal,#modal1:checked~.modal2,#modal2:checked~.modal3 {
     display: block;
 }
