--- a/kakao/style.css
+++ b/kakao/style.css
@@ -61,3 +61,18 @@ nav > ul > li {
     font-weight: 900;
 }
 
+.contetns {
+    width: 100%;
+    height: 800px;
+}
+
+.box {
+    width: 100%;
+    height: 800px;
+}
+
+.box > img {
+    width: 100%;
+    height: 100%;
+}
+
