--- a/kakao/style.css
+++ b/kakao/style.css
@@ -76,3 +76,34 @@ nav > ul > li {
     height: 100%;
 }
 
+.container {
+    width: 100%;
+    display: flex;
+}
+
+.conBox {
+    
+}
+
+.item1 {
+    width: 300px;
+    height: 300px;
+    background-color: lightblue;
+}
+
+.item2 {
+    width: 300px;
+    height: 300px;
+    background-color: lightblue;
+}
+
+.item3 {
+    width: 300px;
+    height: 300px;
+    background-color: lightcoral;
+}
+.item4 {
+    width: 300px;
+    height: 300px;
+    background-color: lightgoldenrodyellow;
+}
