--- a/kakao/style.css
+++ b/kakao/style.css
@@ -93,17 +93,30 @@ nav > ul > li {
 .item1 {
     width: 600px;
     height: 300px;
-    background-color: lightblue;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 40px;
+    font-size: 34px;
 }
 
 .item2 {
+    position: relative;
     width: 600px;
     height: 300px;
-    background-color: lightsalmon;
+    background-color: goldenrod;
+    font-weight: 900;
+    font-size: 20px;
+    text-align: center;
+}
+
+.item2 > img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 500px;
+    height: 250px;
+    margin-top: 15px;
 }
 
 .item3 {
@@ -129,7 +142,7 @@ nav > ul > li {
 .item4 {
     width: 600px;
     height: 300px;
-    background-color: honeydew;
+    background-color: darkgoldenrod;
 }
 
 .item5 {
