--- a/kakao/style.css
+++ b/kakao/style.css
@@ -103,7 +103,6 @@ nav > ul > li {
     position: relative;
     width: 600px;
     height: 300px;
-    background-color: goldenrod;
     font-weight: 900;
     font-size: 20px;
     text-align: center;
@@ -117,6 +116,13 @@ nav > ul > li {
     width: 500px;
     height: 250px;
     margin-top: 15px;
+    border-radius: 10px;
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.6);
+}
+
+.item2 > img:hover {
+    box-shadow: none;
+    transition: all 0.4s;
 }
 
 .item3 {
