--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -1,133 +1,82 @@
 * {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 
-a {
+body li {
+    list-style: none;
+}
+
+body a {
     text-decoration: none;
     color: inherit;
 }
 
-li {
-    list-style: none;
-}
-
-.body {
-    width: 100%;
-    height: 756px;
-    background-color: #aaa;
-}
-
+/* header 영역 */
 header {
     width: 100%;
     height: 100px;
-    background-color: #888;
+    display: flex;
+    background: linear-gradient(180deg, darkblue, lightblue);
+    color: #fff;
+}
+
+.head {
+    width: 1920px;
+    max-width: 1920px;
+    height: 100px;
     display: flex;
 }
 
 .logo {
     width: 300px;
     height: 100px;
-    /* background-color: lightcoral; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.logo > a > img {
-    width: 80px;
-    height: 80px;
+.logo > h1 {
+    text-align: center;
+    line-height: 100px;
 }
 
-nav {
-    width: 900px;
+.inBox {
+    position: relative;
+    width: 800px;
     height: 100px;
-    background-color: lightgreen;
     display: flex;
     justify-content: right;
     align-items: center;
 }
 
+.inBox > input {
+    width: 250px;
+    height: 35px;
+    border-radius: 30px;
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+}
 
-nav > ul {
-    width: 850px;
+.inBox > svg {
+    position: absolute;
+    left: 770px;
+}
+
+.inBox > input::placeholder {
+    color: #fff;
+    padding: 10px;
+}
+
+.headerBtn {
+    width: 300px;
     height: 100px;
-    background-color: lightgoldenrodyellow;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* color: #fff; */
 }
 
-nav > ul > a {
-    width: 400px;
-    height: 100px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.items {
-    width: 400px;
-    height: 100px;
-    /* background-color: lightpink; */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.items > img {
-    width: 50px;
-    height: 50px;
-}
-
-.items > img:nth-child(2) {
-    width: 70px;
-    height: 30px;
-    
-}
-
-.items > img:nth-child(3) {
-    width: 100px;
-    height: 50px;
-}
-
-.container {
-    width: 1920px;
-    height: 700px;
-    background-color: #aaa;
-    display: flex;
-}
-
-.window {
-    width: 1920px;
-    height: 700px;
-    overflow: hidden;
-}
-
-.slide {
-    position: relative;
-    width: 5760px;
-    height: 700px;
-    display: flex;
-    animation: slide 5s infinite linear;
-}
-
-.slide > img {
-    width: 1920px;
-    height: 700px;
-}
-
-@keyframes  slide {
-    0% {
-        left: 0;
-    }
-
-    50% {
-        left: -1920px;
-    }
-
-    100% {
-        left: -5760px;
-    }
+.headerBtn > button {
+    color: #fff;
+    background-color: transparent;
+    border: none;
+    margin-left: 10px;
 }
