--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -80,3 +80,38 @@ header {
     border: none;
     margin-left: 10px;
 }
+
+/* nav 영역 */
+nav {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    background-color: lightblue;
+}
+
+.items {
+    width: 1920px;
+    max-width: 1920px;
+    height: 50px;
+    display: flex;
+}
+
+.itemBox1 {
+    width: 600px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 900;
+}
+
+.itemBox2 {
+    width: 600px;
+    height: 50px;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 900;
+}
