--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -115,3 +115,24 @@ nav {
     font-size: 16px;
     font-weight: 900;
 }
+
+/* section 영역 */
+section {
+    width: 100%;
+    height: 400px;
+}
+
+.idiom {
+    width: 1200px;
+    max-width: 1200px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #A5ACE8;
+}
+
+.idiom > p {
+    font-size: 70px;
+
+}
