--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -104,6 +104,7 @@ nav {
     align-items: center;
     font-size: 16px;
     font-weight: 900;
+    
 }
 
 .itemBox2 {
@@ -116,8 +117,22 @@ nav {
     font-weight: 900;
 }
 
+.box1,
+.box2,
+.box3,
+.box4,
+.box5,
+.box6,
+.box7,
+.box8,
+.box9 {
+    width: 70px;
+    height: 40px;
+    line-height: 40px;
+}
+
 /* section 영역 */
-section {
+.con1 {
     width: 100%;
     height: 400px;
 }
@@ -134,5 +149,4 @@ section {
 
 .idiom > p {
     font-size: 70px;
-
 }
