--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -70,7 +70,7 @@ header {
     width: 300px;
     height: 100px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
