--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -169,7 +169,7 @@ header {
 }
 
 /* 팝업창 영역 */
-.popBox1 {
+.pop-Box1 {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -182,7 +182,7 @@ header {
     line-height: 100px;
 }
 
-.pop-menu1 {
+.menuBox1 {
     width: 100%;
     height: 500px;
     background-color: lightcoral;
@@ -207,6 +207,49 @@ header {
 .footer1 {
     width: 900px;
     height: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.pop-Box2 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: darkorange;
+}
+
+.title2 {
+    width: 100%;
+    height: 100px;
+    line-height: 100px;
+}
+
+.menuBox2 {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu2 {
+    width: 900px;
+    height: 400px;
+    background-color: lightgreen;
+}
+
+.pop-footer2 {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer2 {
+    width: 900px;
+    height: 100px;
     display: flex;
     justify-content: space-around;
     align-items: center;
