--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -223,6 +223,7 @@ header {
     width: 100%;
     height: 100px;
     line-height: 100px;
+    background-color: lightsalmon;
 }
 
 .menuBox2 {
@@ -234,7 +235,7 @@ header {
 }
 
 .menu2 {
-    width: 900px;
+    width: 100%;
     height: 400px;
     background-color: lightgreen;
 }
