--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -196,6 +196,11 @@ header {
     align-items: center;
 }
 
+.menu1 > p > img {
+    width: 400px;
+    height: 400px;
+}
+
 .pop-footer1 {
     width: 100%;
     height: 200px;
