--- a/Dropdown-menubar/style.css
+++ b/Dropdown-menubar/style.css
@@ -15,7 +15,7 @@ a {
 .menu {
 	width: 600px;
 	height: 50px;
-	background-color: lightcyan;
+	background-color: lightblue;
 	text-align: center;
 	line-height: 50px;
 }
