--- a/modal/style.css
+++ b/modal/style.css
@@ -9,7 +9,7 @@
 .modal2 {
     width: 400px;
     height: 300px;
-    background-color: lightcoral;
+    background-color: darkblue;
     display: none;
 }
 
