Feat: nuribom-project1

--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -207,6 +207,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: lightblue;
 }
 
 .footer1 {
