--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -252,6 +252,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: lightblue;
 }
 
 .footer2 {
