--- a/test/style.css
+++ b/test/style.css
@@ -3,74 +3,31 @@
     padding: 0;
 }
 
-.body {
-    width: 100%;
-    height: 735px;
-    background-color: lightblue;
+input {
+    display: none;
 }
 
-li {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    background-color: lightcyan;
-}
-
-.logo {
-    width: 200px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-nav {
-    width: 800px;
-    height: 100px;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    /* background-color: lightcoral; */
-}
-
-nav > ul {
+.modalb {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     width: 400px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background-color: #aaa; */
+    height: 300px;
+    border: 1px solid black;
+    display: none;
 }
 
-nav > ul > li{
-    width: 70px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.btn {
-    width: 300px;
-    height: 100px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.btn > button {
+label {
+    position: absolute;
     width: 100px;
-    height: 40px;
-    border-radius: 10px;
-    background-color: #bbb;
-    border: 1px solid #111;
+    height: 50px;
+    background-color: lightblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modal:checked~.modalb {
+    display: block;
 }
