--- a/test2/style.css
+++ b/test2/style.css
@@ -1,9 +1,24 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
+.container {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    overflow: hidden;
+  }
+  
+  button {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200px;
+    height: 50px;
+    background-color: #3498db;
+    color: #fff;
+    border: none;
+    outline: none;
+    transition: transform 0.5s ease;
+  }
+  
+  .slide {
+    transform: translateX(150%);
+  }
+  
