--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -204,6 +204,12 @@ header {
     font-size: 16px;
 }
 
+.fiv,
+.sevn,
+.nine {
+    background-color: lightcoral;
+}
+
 /* 팝업창 영역 */
 .pop-Box1 {
     position: absolute;
