--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -85,6 +85,66 @@ header {
     display: block;
 }
 
+.logb {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translate(-50%,-50%);
+    background-color: #fff;
+    /* display: none; */
+}
+
+.lbox {
+    width: 500px;
+    height: 500px;
+    border: 1px solid black;
+    color: #111;
+}
+
+.logotext {
+    width: 500px;
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    border-bottom: 1px solid black;
+}
+
+.id-pass {
+    width: 500px;
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.id {
+    width: 500px;
+    height: 50px;
+} 
+
+.id > input {
+    width: 300px;
+    height: 40px;
+}
+
+.password {
+    width: 500px;
+    height: 50px;
+}
+
+.password > input {
+    width: 300px;
+    height: 40px;
+}
+
 /* nav 영역 */
 nav {
     width: 100%;
