--- a/modal-test/style.css
+++ b/modal-test/style.css
@@ -1,7 +1,7 @@
 .wrap {
     width: 400px;
     height: 300px;
-    background-color: lightblue;
+    background-color: blue;
     display: flex;
 }
 
