--- a/kakao/style.css
+++ b/kakao/style.css
@@ -16,7 +16,7 @@ header {
     width: 100%;
     height: 70px;
     display: flex;
-    background-color: blue;
+    background-color: lightblue;
 }
 
 .logo {
