--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -184,7 +184,7 @@ header {
     transform: translate(-50%,-50%);
     background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
-    /* display: none; */
+    display: none;
 }
 
 #modal3:checked~.modalb1 {
