--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -172,11 +172,7 @@ header {
 }
 
 .close1 {
-    cursor: pointer;
-    position: absolute;
-    bottom: 0;
-    font-size: 18px;
-    font-weight: 900;
+    display: none;    
 }
 
 #modal3 {
