--- a/nuribom-WebProjcet/style.css
+++ b/nuribom-WebProjcet/style.css
@@ -53,7 +53,7 @@ header {
 .conBox {
     position: relative;
     width: 1920px;
-    height: 700px;
+    height: 800px;
     border: 1px solid black;
     border-radius: 15px;
     margin-top: 20px;
@@ -62,6 +62,8 @@ header {
 .items {
     margin-left: 40px;
     width: 500px;
+    max-width: 500px;
+    max-height: 700px;
     height: 700px;
     display: grid;
     grid-template-columns: 0.5fr 0.5fr 1fr;
@@ -76,6 +78,49 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.file {
+    position: absolute;
+    width: 800px;
+    max-width: 800px;
+    max-height: 700px;
+    height: 700px;
+    right: 0;
+    top: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-top: 25px;
+}
+
+.eight {
+    width: 90px;
+    height: 60px;
+    background-color: lightblue;
+    text-align: center;
+    line-height: 60px;
+}
+
+.page-btn {
+    position: absolute;
+    width: 500px;
+    height: 80px;
+    right: 0;
+    left: 1280px;
+    display: flex;
+    margin-top: 20px;
+}
+
+.page-btn > button {
+    margin-left: 50px;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
+.page-btn > h2 {
+    margin-left: 40px;
 }
 
 /* 아이템 영역 */
@@ -95,6 +140,7 @@ header {
     transform: translate(-50%,-50%);
     background-color: #fff;
     display: none;
+    z-index: 1;
 }
 
 .one,
@@ -258,7 +304,6 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: darkorange;
 }
 
 .title2 {
@@ -270,7 +315,7 @@ header {
 
 .menuBox2 {
     width: 100%;
-    height: 400px;
+    height: 660px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -278,7 +323,7 @@ header {
 
 .menu2 {
     width: 100%;
-    height: 400px;
+    height: 660px;
     background-color: lightgreen;
 }
 
