--- a/INPYUNG-PROJECT/style.css
+++ b/INPYUNG-PROJECT/style.css
@@ -17,7 +17,7 @@ header {
     width: 100%;
     height: 100px;
     display: flex;
-    backgrond-color: lightblue;
+    backgrond-color: blue;
 }
 
 .logo {
