--- a/WebProject-nuribom/style.css
+++ b/WebProject-nuribom/style.css
@@ -111,6 +111,7 @@ a > img {
     width: 100px;
     height: 60px;
     margin-left: 20px;
+    margin-top: 30px;
     background-color: lightblue;
     border-radius: 10px;
     display: flex;
@@ -164,7 +165,33 @@ a > img {
 .pop-footer {
     width: 100%;
     height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: lightgray;
+}
+
+.footerBtn {
+    width: 1920px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 70px;
+}
+
+.window {
+    width: 1000px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerBtn > .window > button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
 }
 
 #modal:checked~.modalb {
