--- a/nuribom/style01.css
+++ b/nuribom/style01.css
@@ -37,3 +37,83 @@ header {
     text-align: center;
     line-height: 100px;
 }
+
+.point {
+    width: 800px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+/* 사자성어 영역 */
+.idiom {
+    width: 100%;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #A5ACE8;
+}
+
+.test {
+    position: relative;
+    width: 1300px;
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.test-text {
+    width: 950px;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    padding: 30px;
+}
+
+.point {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 400px;
+    height: 60px;
+    color: red;
+    font-size: 30px;
+}
+
+.idiom-text {
+    padding: 40px;
+    bottom: 0;
+    width: 500px;
+    height: 100px;
+    display: flex;
+}
+
+.hanja {
+    width: 500px;
+    height: 50px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.hanja > button {
+    width: 80px;
+    height: 40px;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.unkown {
+    width: 150px;
+    height: 50px;
+    display: flex;
+    font-size: 18px;
+}
