--- a/nuribom/style.css
+++ b/nuribom/style.css
@@ -344,7 +344,8 @@ nav {
 
 #close {
     position: absolute;
-    right: 0;
+    left: 0;
+    bottom: 0;
     width: 100px;
     height: 40px;
     background-color: lightblue;
