--- a/WebProject-nuribom/style.css
+++ b/WebProject-nuribom/style.css
@@ -220,3 +220,17 @@ a > img {
 #modal:checked~.modalb {
     display: block;
 }
+
+.slide-page {
+    width: 300px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.slide-page > button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
