--- a/nuribom/style02.css
+++ b/nuribom/style02.css
@@ -118,4 +118,13 @@ header {
     display: flex;
     font-size: 18px;
     cursor: pointer;
+    margin-top: 30px;
+}
+
+#questions-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 40px;
 }
