--- a/nuribom/log.css
+++ b/nuribom/log.css
@@ -77,6 +77,11 @@ a {
     text-align: center;
 }
 
+.register > a:hover {
+    color: blue;
+    transition: all 0.1s;
+}
+
 .items {
     width: 400px;
     height: 40px;
